--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="print.css" media="print">
-    <title>TITRE A CHANGER</title>
+    <title>TP WEB :: Mon CV</title>
 </head>
 <body>
 CONTENU A CHANGER
