--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <title>ADJIWANOU Darill - Portfolio</title>
       <link rel="shortcut icon" href="./assets/img/logo2.png" type="image/x-icon">
 
-      <!-- <link rel="stylesheet" href="./assets/css/styles.css"> -->
+      <link rel="stylesheet" href="./assets/css/styles.css">
       <link rel="stylesheet" href="./assets/css/print.css" media="print">
    </head>
    <body>
